tests/machine/x/c/group_by_conditional_sum.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c:127:29: error: array subscript is not an integer
  127 |     ItemsItem i = items.data[i];
      |                             ^
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c:167:16: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  167 |     tmp8[tmp7] = g.key;
      |                ^
/workspace/mochi/tests/machine/x/c/group_by_conditional_sum.c:184:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_ResultItem’ [-Wformat=]
  184 |   printf("%d\n", result);
      |           ~^     ~~~~~~
      |            |     |
      |            int   list_ResultItem

   1: #include <stdio.h>
